# pitcherKModel

./: .env.example  .gitignore  README.md  analyze_detailed.py  analyze_final.py  analyze_final2.py  analyze_temp.py  check_cols.py  context_summary.txt  dashboard.py  do_commit_push.bat  generate_dashboard.py  push.ps1  pyproject.toml  requirements.txt  research_unders_diagnostic.py  run_7am_now.bat  run_daily_pipeline.ps1  run_pipeline_june20.bat  run_pipeline_june21.bat
config/: _test_config.yaml  config.yaml  config_2024only.yaml  config_apr2026.yaml  config_ensemble_wf2025.yaml  config_oos2025.yaml  config_poisson.yaml  config_poisson_wf2025.yaml
docs/: STRIKEOUTS.md  picks.html
lekobe/: README.md
reports/: lekobe_reconciliation_audit.md  unders_market_analysis.md
scripts/: _analyze_full2026.py  _audit_checks.py  _bol_bug_fix_verify.py  _bol_clean_check.py  _bol_deep_check.py  _bol_spot_check.py  _bol_trace.py  _build_daily_excel.py  _build_excel.py  _check_edges.py  _clv_breakdown.py  _clv_corrected.py  _clv_sides.py  _combine_odds.py  _combined_view.py  _compare_odds.py  _devigged_clv.py  _fd_clv_benchmark.py  _fetch_pinnacle_close.py  _filter_dk.py  _filter_scan.py  _full2026_analysis.py  _kobe_verify.py  _lineup_audit.py  _mb_clv_all_edges.py  _mb_clv_local.py  _mk_2025_dk.py  _multibook_clv.py  _odds_audit.py  _our_band_breakdown.py  _pick_threshold.py  _profit_ttest.py  _sharp_clv_2025.py  _sharp_clv_check.py  _sig_test_2026.py  _significance.py  _wf_bands.py  _wf_results.py  analyze_edge.py  analyze_picks.py  (+68 more)
site/: dashboard-two.html  home.html  (+3 more)
(+177 files in other folders)
